--- a/premedia/edetailers/scss/colours.scss
+++ b/premedia/edetailers/scss/colours.scss
@@ -2,3 +2,5 @@ $darkBlue: #3A3A9D;
 $lightGray: #F4F4F4;
 $lightBlue: #83D0F4;
 $transparent: rgba(58, 58, 157,0);
+
+$easeInOut: cubic-bezier(0.250, 0.460, 0.450, 0.940);
