--- a/premedia/edetailers/scss/sections/about.scss
+++ b/premedia/edetailers/scss/sections/about.scss
@@ -26,4 +26,28 @@
 			margin: 0;
 		}
 	}
+	&.animated {
+		.info-panel {
+			animation: fade-in 1s $easeInOut both;
+			animation-delay: .5s;
+		}
+		.business-panel {
+			h3 {
+				animation: fade-in 1s $easeInOut both;
+				animation-delay: 1.5s;
+			}
+			.column:nth-of-type(1) {
+				animation: fade-in 1s $easeInOut both;
+				animation-delay: 2s;
+			}
+			.column:nth-of-type(2) {
+				animation: fade-in 1s $easeInOut both;
+				animation-delay: 2.5s;
+			}
+			.column:nth-of-type(3) {
+				animation: fade-in 1s $easeInOut both;
+				animation-delay: 3s;
+			}
+		}
+	}
 }
