--- a/premedia/edetailers/scss/sections/edetailers.scss
+++ b/premedia/edetailers/scss/sections/edetailers.scss
@@ -4,10 +4,23 @@
 		background-color: $lightGray;
 		padding: 1em 2em 2em;
 		h1{
+			margin-top: 0;
 			color: $darkBlue;
 		}
 		p:last-of-type {
 			margin-bottom: 0;
+		}
+	}
+	.image-panel {
+		display: flex;
+		align-items: flex-end;
+		// padding: 1em 0 0 1em;
+		img:nth-of-type(1) {
+			width: calc(60% - 1em);
+			padding-right: 1em;
+		}
+		img:nth-of-type(2) {
+			width: 40%;
 		}
 	}
 	.service-panel {
@@ -22,6 +35,26 @@
 				background-color: $lightBlue;
 				border: none;
 			}
+		}
+	}
+
+	&.animated {
+		.info-panel {
+			animation: fade-in-left 1s $easeInOut both;
+			animation-delay: .5s
+		}
+		.image-panel img{
+			animation: fade-in-left 1s $easeInOut both;
+			&:nth-of-type(1) {
+				animation-delay: 1.3s;
+			}
+			&:nth-of-type(2) {
+				animation-delay: 1.5s;
+			}
+		}
+		.service-panel {
+			animation: slide-in-up 1s $easeInOut both;
+			animation-delay: 2s;
 		}
 	}
 }
