--- a/premedia/edetailers/scss/style.scss
+++ b/premedia/edetailers/scss/style.scss
@@ -3,6 +3,8 @@
 .preload * {
 	-webkit-transition: none !important;
 	transition: none !important;
+	animation-duration: 0s !important;
+	-webkit-animation-duration: 0s !important;
 }
 
 @import 'colours';
@@ -75,7 +77,7 @@ p {
 
 .light-blue-underline {
 	border-bottom: 4px solid $lightBlue;
-	padding-bottom: .5em;
+	padding-bottom: .25em;
 	box-sizing: border-box;
 	margin-bottom: 1.5em;
 }
