--- a/premedia/edetailers/scss/sections/contact.scss
+++ b/premedia/edetailers/scss/sections/contact.scss
@@ -1,9 +1,122 @@
 #contact-section {
 	background-color: $darkBlue;
 	color: #fff;
-	h3 {
-		font-size: .8em;
-		color: $lightBlue;
-		text-transform: uppercase;
+	.grid {
+		padding-top: 3em;
+		.column {
+			padding: 0;
+		}
+		.contact-info{
+			border-right: 2px solid white;
+			h3 {
+				color: $lightBlue;
+				text-transform: uppercase;
+				margin: 0;
+			}
+			p {
+				line-height: initial;
+				margin: .5em 0;
+				a {
+					color: white;
+					// text-decoration: none;
+				}
+			}
+		}
+		.contact-form {
+			display: block;
+			margin-left: 10em;
+
+			label, input, textarea {
+				transition: all 0.2s $easeInOut;
+				touch-action: manipulation;
+				position: relative;
+			}
+
+			label {
+				z-index: 1;
+				display: inline-block;
+				text-transform: uppercase;
+				letter-spacing: 0.05em;
+				font-size: .9em;
+			}
+
+			input[type="text"], input[type="number"], input[type="email"], textarea {
+				color: white;
+				background-color: $transparent;
+				border: 0;
+				border-bottom: 2px solid $lightBlue;
+				box-sizing: border-box;
+				padding: .5em 1em;
+				width: 100%;
+				-webkit-appearance: none;
+				z-index: 3;
+				font-size: 1em;
+
+				&:focus {
+					outline: 0;
+				}
+				&::placeholder {
+					opacity: 0;
+					color: #888;
+					transition: inherit;
+				}
+				&:focus::placeholder {
+					opacity: 1;
+				}
+				&:placeholder-shown + label {
+					cursor: text;
+					transform-origin: left bottom;
+					transform: translate(.85rem, 1.2rem);
+				}
+				&:not(:placeholder-shown) + label, &:focus + label {
+					transform: translate(0, 0);
+					cursor: pointer;
+					font-size: .8em;
+					color: $lightBlue;
+				}
+			}
+			input[data-valid="error"], textarea[data-valid="error"] {
+				border-color: red;
+			}
+
+			textarea {
+				margin-top: 1em;
+				border: 2px solid $lightBlue;
+				height: 6em;
+				padding: 1em;
+				box-sizing: border-box;
+				resize: vertical;
+				&:placeholder-shown + label {
+					transform: translate(.85rem, 2.6rem);
+				}
+				&:not(:placeholder-shown) + label, &:focus + label {
+					transform: translate(0, .5rem);
+					cursor: pointer;
+				}
+			}
+			.row {
+				display: flex;
+				justify-content: space-between;
+				.input-container {
+					margin-bottom: 1em;
+					display: flex;
+					flex-flow: column-reverse;
+					width: 45%;
+					&.full-width {
+						width: 100%;
+					}
+					#error-name, #error-email, #error-message {
+						text-align: right;
+						font-size: .8em;
+						font-style: oblique;
+					}
+				}
+				&:nth-of-type(1){
+					.input-container {
+						margin-bottom: .2em;
+					}
+				}
+			}
+		}
 	}
 }
