fix vertical alignment across all sections to be conistent

--- a/premedia/edetailers/scss/sections/certifications.scss
+++ b/premedia/edetailers/scss/sections/certifications.scss
@@ -1,11 +1,12 @@
 #certifications-section {
 	background-color: #EFEFEF;
 	position: relative;
+	padding: 0 0 13em;
 	.section-title {
-		margin: 5em 0 3em;
 		hr {
 			width: 10em;
 		}
+		margin-bottom: 5em;
 	}
 	.column {
 		.cert-logo-container {
