--- a/premedia/edetailers/css/style.css
+++ b/premedia/edetailers/css/style.css
@@ -1,10 +1,4 @@
 @import url("https://fonts.googleapis.com/css?family=Lato|Varela&display=swap");
-.preload * {
-  -webkit-transition: none !important;
-  transition: none !important;
-  animation-duration: 0s !important;
-  -webkit-animation-duration: 0s !important; }
-
 .grid {
   display: flex;
   flex-wrap: wrap; }
@@ -198,9 +192,10 @@ body.fp-viewing-home nav .nav-container .right .nav-item.active, body.fp-viewing
 
 #certifications-section {
   background-color: #EFEFEF;
-  position: relative; }
+  position: relative;
+  padding: 0 0 13em; }
   #certifications-section .section-title {
-    margin: 5em 0 3em; }
+    margin-bottom: 5em; }
     #certifications-section .section-title hr {
       width: 10em; }
   #certifications-section .column .cert-logo-container {
@@ -273,7 +268,8 @@ body.fp-viewing-home nav .nav-container .right .nav-item.active, body.fp-viewing
 #services-section {
   background-image: url("../img/service_bg.jpg");
   background-repeat: no-repeat;
-  background-position: center top;
+  background-size: cover;
+  background-position: center center;
   background-size: 100%; }
   #services-section .column {
     margin-left: .5em;
@@ -305,7 +301,7 @@ body.fp-viewing-home nav .nav-container .right .nav-item.active, body.fp-viewing
     #services-section .transcreation h3 {
       color: #fff; }
   #services-section.animated .column {
-    animation: slide-in-up .7s linear both; }
+    animation: slide-in-up 0.7s cubic-bezier(0.25, 0.46, 0.45, 0.94) both; }
     #services-section.animated .column:nth-of-type(1) {
       animation-delay: 0.65s; }
     #services-section.animated .column:nth-of-type(2) {
@@ -367,7 +363,7 @@ body.fp-viewing-home nav .nav-container .right .nav-item.active, body.fp-viewing
   #how-we-work-section .btn-container .btn {
     margin-top: 1em; }
 #how-we-work-section.animated .work-container .dot {
-  animation: timeline-fill-dot .5s linear forwards; }
+  animation: timeline-fill-dot 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards; }
   #how-we-work-section.animated .work-container .dot.one {
     animation-delay: 1s; }
   #how-we-work-section.animated .work-container .dot.two {
