--- a/premedia/edetailers/scss/style.scss
+++ b/premedia/edetailers/scss/style.scss
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Lato|Varela&display=swap');
 
 .preload * {
-	-webkit-transition: none !important;
-	transition: none !important;
-	animation-duration: 0s !important;
-	-webkit-animation-duration: 0s !important;
+	// -webkit-transition: none !important;
+	// transition: none !important;
+	// animation-duration: 0s !important;
+	// -webkit-animation-duration: 0s !important;
 }
 
 @import 'colours';
