--- a/premedia/edetailers/scss/grid.scss
+++ b/premedia/edetailers/scss/grid.scss
@@ -31,6 +31,6 @@
 	flex: 0 0 20%;
 }
 
-@media (max-width: 900px) {
-	.grid { display: block; }
-}
+// @media (max-width: 900px) {
+// 	.grid { display: block; }
+// }
