--- a/premedia/edetailers/scss/sections/about.scss
+++ b/premedia/edetailers/scss/sections/about.scss
@@ -1,6 +1,5 @@
 #about-section {
 	.column {
-		margin: 0 1.5em;
 		.info-panel {
 			padding: 1em;
 			background-color: $darkBlue;
@@ -9,6 +8,7 @@
 	}
 	.business-panel {
 		padding-top: 12em;
+		padding-left: 3em;
 		.about-icon {
 			height: 4em;
 			img {
@@ -24,6 +24,12 @@
 		.column {
 			padding: 1em;
 			margin: 0;
+			&:first-of-type {
+				padding-left: 0;
+			}
+			&:last-of-type {
+				padding-right: 0;
+			}
 		}
 	}
 	&.animated {
@@ -36,17 +42,9 @@
 				animation: fade-in 1s $easeInOut both;
 				animation-delay: 1.5s;
 			}
-			.column:nth-of-type(1) {
+			.column {
 				animation: fade-in 1s $easeInOut both;
-				animation-delay: 2s;
-			}
-			.column:nth-of-type(2) {
-				animation: fade-in 1s $easeInOut both;
-				animation-delay: 2.5s;
-			}
-			.column:nth-of-type(3) {
-				animation: fade-in 1s $easeInOut both;
-				animation-delay: 3s;
+				@include staggeredDelays(3, .5, 1.5);
 			}
 		}
 	}
