--- a/premedia/edetailers/scss/sections/edetailers.scss
+++ b/premedia/edetailers/scss/sections/edetailers.scss
@@ -45,12 +45,7 @@
 		}
 		.image-panel img{
 			animation: fade-in-left 1s $easeInOut both;
-			&:nth-of-type(1) {
-				animation-delay: 1.3s;
-			}
-			&:nth-of-type(2) {
-				animation-delay: 1.5s;
-			}
+			@include staggeredDelays(2, .2, 1.1);
 		}
 		.service-panel {
 			animation: slide-in-up 1s $easeInOut both;
