--- a/premedia/edetailers/scss/sections/home.scss
+++ b/premedia/edetailers/scss/sections/home.scss
@@ -3,13 +3,10 @@
 	// -webkit-clip-path: ellipse(94% 53% at 50% 40%);
 	// clip-path: ellipse(94% 53% at 50% 40%);
 	.info-panel {
+		margin-left: 2em;
 		color: #fff;
 		h1 {
 			margin-top: 0;
-		}
-
-		.btn {
-			margin-top: 3em;
 		}
 	}
 
@@ -18,7 +15,7 @@
 		* {
 			margin: 0 auto;
 		}
-		width: 70%;
+		width: 100%;
 
 		.frame-container {
 			border: 1vw solid;
