remove fullpageJS and all css related to it. replaced with vanilla CSS scroll-snapping andIntersectionObserver api for JS for functionality

--- a/premedia/edetailers/scss/mixins.scss
+++ b/premedia/edetailers/scss/mixins.scss
@@ -6,6 +6,21 @@
 	}
 }
 
+@mixin keyframes($name) {
+	@-webkit-keyframes #{$name} {
+		@content; 
+	}
+	@-moz-keyframes #{$name} {
+		@content;
+	}
+	@-ms-keyframes #{$name} {
+		@content;
+	}
+	@keyframes #{$name} {
+		@content;
+	}
+}
+
 // 1024
 @mixin media-lg-screen {
 	@media screen and (max-width: 1024px) {
