--- a/premedia/edetailers/scss/sections/home.scss
+++ b/premedia/edetailers/scss/sections/home.scss
@@ -1,4 +1,4 @@
-#home-section {
+#home {
 	background-color: $darkBlue;
 	// -webkit-clip-path: ellipse(94% 53% at 50% 40%);
 	// clip-path: ellipse(94% 53% at 50% 40%);
