--- a/premedia/edetailers/scss/sections/services.scss
+++ b/premedia/edetailers/scss/sections/services.scss
@@ -1,4 +1,4 @@
-#services-section {
+#services {
 	background-image: url('../img/service_bg.jpg');
 	background-repeat: no-repeat;
 	background-size: cover;
