--- a/premedia/edetailers/scss/animations.scss
+++ b/premedia/edetailers/scss/animations.scss
@@ -1,4 +1,4 @@
-@keyframes timeline-draw-right { 
+@include keyframes(timeline-draw-right ){ 
 	from {
 		-webkit-clip-path: polygon(0 0, 0 0, 0 100%, 0 100%);
 		clip-path: polygon(0 0, 0 0, 0 100%, 0 100%);
@@ -9,7 +9,7 @@
 	}
 }
 
-@keyframes fade-in {
+@include keyframes(fade-in) {
 	from {
 		opacity: 0;
 	}
@@ -18,7 +18,7 @@
 	}
 }
 
-@keyframes slide-in-up {
+@include keyframes(slide-in-up) {
 	0% {
 		opacity: 0;
 		transform: translateY(100vh);
@@ -30,7 +30,7 @@
 		transform: translateY(0);
 	}
 }
-@keyframes fade-in-left {
+@include keyframes(fade-in-left) {
 	from {
 		opacity: 0;
 		transform: translateX(100vw);
@@ -41,13 +41,13 @@
 	}
 }
 
-@keyframes animate-home-bg {
+@include keyframes(animate-home-bg) {
 	from {
-		-webkit-clip-path: ellipse(100% 100% at 50% 40%);
+		// -webkit-clip-path: ellipse(100% 100% at 50% 40%);
 		clip-path: ellipse(100% 100% at 50% 40%);
 	}
 	to {
-		-webkit-clip-path: ellipse(94% 53% at 50% 40%);
+		// -webkit-clip-path: ellipse(94% 53% at 50% 40%);
 		clip-path: ellipse(94% 53% at 50% 40%);
 	}
 }
