--- a/premedia/edetailers/scss/sections/map.scss
+++ b/premedia/edetailers/scss/sections/map.scss
@@ -1,11 +1,11 @@
-#map-section {
+#map {
 	text-align: center;
 	h2 {
 		color: $darkBlue;
 	}
 	.map-container {
-		width: 100%;
-		height: 75vh;
+		width: 80vw;
+		height: 80vh;
 		margin: 0 auto;
 		#jvectormap {
 			width: 100%;
